refining dashboard and other pages
